--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,4 +3,26 @@ benjamin:
   name: Benjamin Example
   email: benjamin@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
+  
+kelly:
+  name: Kelly Example
+  email: kelly@example.com  
+  password_digest: <%= User.digest('password') %>
+  
+lana:
+  name: Lana Kane
+  email: hands@example.gov
+  password_digest: <%= User.digest('password') %>
 
+mallory:
+  name: Mallory Archer
+  email: boss@example.gov
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
